--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,19 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 # HTTP server
-axum = { version = "0.8", features = ["macros"] }
+axum = { version = "0.8", features = ["macros", "ws"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["trace", "timeout", "limit", "request-id", "util"] }
 hyper = { version = "1.8", features = ["server", "http1", "http2"] }
 hyper-util = { version = "0.1", features = ["tokio"] }
 
+# gRPC (future work - tonic-build 0.14 API requires investigation)
+# tonic = "0.14"
+# prost = "0.14"
+
 # Async runtime
 tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
+tokio-stream = "0.1"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -36,8 +41,16 @@ thiserror = "2.0"
 anyhow = "1.0"
 
 # Utilities
-rand = "0.8"
+rand = "0.9"
 parking_lot = "0.12"
+socket2 = "0.6"
+chrono = "0.4"
+futures-util = "0.3"
+
+# Performance optimization
+arc-swap = "1.8"
+crossbeam = "0.8"
+hdrhistogram = "7.5"
 
 [dev-dependencies]
 reqwest = { version = "0.12", features = ["json"] }
@@ -54,3 +67,7 @@ opt-level = 0
 
 [profile.test]
 opt-level = 1
+
+# [build-dependencies]
+# tonic-build = "0.14"  # Future work - API requires investigation
+# prost-build = "0.14"
