--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,11 +46,13 @@ parking_lot = "0.12"
 socket2 = "0.6"
 chrono = "0.4"
 futures-util = "0.3"
+once_cell = "1.21"
 
 # Performance optimization
 arc-swap = "1.8"
 crossbeam = "0.8"
 hdrhistogram = "7.5"
+tikv-jemallocator = "0.6"
 
 [dev-dependencies]
 reqwest = { version = "0.12", features = ["json"] }
